AMDGPU, kernel NULL pointer dereference (5.13.12 debugfs RX6600 XT)
[ 5.039677] BUG: kernel NULL pointer dereference, address: 000000000000002f
[ 5.039759] #PF: supervisor read access in kernel mode
[ 5.039816] #PF: error_code(0x0000) - not-present page
[ 5.039871] PGD 0 P4D 0
[ 5.039904] Oops: 0000 [#1] PREEMPT SMP PTI
[ 5.039952] CPU: 1 PID: 279 Comm: systemd-udevd Not tainted 5.13.12-arch1-1 #1
[ 5.040030] Hardware name: System manufacturer System Product Name/Z170 PRO GAMING, BIOS 3805 05/16/2018
[ 5.040129] RIP: 0010:debugfs_create_file_size+0x2e/0x40
[ 5.040190] Code: 00 4d 85 c0 53 48 c7 c0 00 dc 05 94 4c 89 cb 4d 89 c1 49 c7 c0 00 da 05 94 0f b7 f6 4c 0f 44 c0 e8 07 fe ff ff 48 85 c0 74 08 <48> 8b 40 30 48 89 58 50 5b c3 0f 1f 84 00 00 00 00 00 0f 1f 44 00
[ 5.040387] RSP: 0018:ffffb70440b37970 EFLAGS: 00010286
[ 5.040444] RAX: ffffffffffffffff RBX: 00000001ff000000 RCX: ffff95aac4520000
[ 5.040519] RDX: 0000000000000000 RSI: ffffffffffffffff RDI: ffffffffc0e58b6b
[ 5.040599] RBP: ffff95aac4520000 R08: ffffffff9405da00 R09: ffffffffc0d026a0
[ 5.040675] R10: ffffb70440b377a8 R11: ffffffff94accde8 R12: ffff95aac4520000
[ 5.040751] R13: ffffffffffffffff R14: ffff95aac4520000 R15: 0000000000000000
[ 5.040826] FS: 00007f35c4634a40(0000) GS:ffff95b1d6c80000(0000) knlGS:0000000000000000
[ 5.040911] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 5.040973] CR2: 000000000000002f CR3: 000000010316c003 CR4: 00000000003706e0
[ 5.041050] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[ 5.041126] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
[ 5.041201] Call Trace:
[ 5.041235] amdgpu_ttm_debugfs_init+0x39/0x110 [amdgpu]
[ 5.041511] amdgpu_debugfs_init+0x6c/0x290 [amdgpu]
[ 5.041759] amdgpu_pci_probe+0x180/0x1b0 [amdgpu]
[ 5.041993] local_pci_probe+0x42/0x80
[ 5.042037] ? pci_match_device+0xd7/0x110
[ 5.042085] pci_device_probe+0xfa/0x1b0
[ 5.042129] really_probe+0x225/0x490
[ 5.042173] driver_probe_device+0xe8/0x160
[ 5.042220] device_driver_attach+0xa1/0xb0
[ 5.042268] __driver_attach+0x8f/0x150
[ 5.042312] ? device_driver_attach+0xb0/0xb0
[ 5.042361] ? device_driver_attach+0xb0/0xb0
[ 5.042410] bus_for_each_dev+0x89/0xd0
[ 5.042454] bus_add_driver+0x12b/0x1e0
[ 5.042498] driver_register+0x8f/0xe0
[ 5.042541] ? 0xffffffffc107f000
[ 5.042580] do_one_initcall+0x57/0x220
[ 5.042626] do_init_module+0x5c/0x270
[ 5.042669] load_module+0x2545/0x2740
[ 5.042715] ? __do_sys_init_module+0x12e/0x1b0
[ 5.042766] __do_sys_init_module+0x12e/0x1b0
[ 5.042816] do_syscall_64+0x61/0x80
[ 5.042858] ? __audit_syscall_exit+0x24d/0x2a0
[ 5.042910] ? syscall_exit_to_user_mode+0x23/0x50
[ 5.042964] ? do_syscall_64+0x6e/0x80
[ 5.043006] ? do_syscall_64+0x6e/0x80
[ 5.043049] ? exc_page_fault+0x78/0x180
[ 5.043095] entry_SYSCALL_64_after_hwframe+0x44/0xae
[ 5.043152] RIP: 0033:0x7f35c4f6b32e
[ 5.043191] Code: 48 8b 0d 45 0b 0c 00 f7 d8 64 89 01 48 83 c8 ff c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa 49 89 ca b8 af 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 12 0b 0c 00 f7 d8 64 89 01 48
[ 5.043389] RSP: 002b:00007ffd13345488 EFLAGS: 00000246 ORIG_RAX: 00000000000000af
[ 5.043472] RAX: ffffffffffffffda RBX: 000055cb09d66e00 RCX: 00007f35c4f6b32e
[ 5.043548] RDX: 00007f35c50c2a9d RSI: 0000000000db3c21 RDI: 00007f35c24d1010
[ 5.043623] RBP: 00007f35c24d1010 R08: 00007f35c34b7000 R09: 0000000000000000
[ 5.043698] R10: 000055cb09d96d80 R11: 0000000000000246 R12: 00007f35c50c2a9d
[ 5.043774] R13: 000055cb09d66e00 R14: 000055cb09d7c0f0 R15: 000055cb09d66e00
[ 5.043850] Modules linked in: ath9k ath9k_common ath9k_hw ath intel_rapl_msr mac80211 intel_rapl_common intel_tcc_cooling usblp x86_pkg_temp_thermal intel_powerclamp iTCO_wdt kvm_intel intel_pmc_bxt ee1004 mei_hdcp iTCO_vendor_support joydev mousedev wmi_bmof mxm_wmi kvm snd_hda_codec_realtek irqbypass coretemp crct10dif_pclmul snd_hda_codec_generic crc32_pclmul ledtrig_audio snd_hda_codec_hdmi cfg80211 ghash_clmulni_intel aesni_intel snd_hda_intel crypto_simd cryptd rapl intel_cstate intel_uncore snd_intel_dspcfg snd_intel_sdw_acpi pcspkr snd_hda_codec i2c_i801 snd_hda_core e1000e i2c_smbus amdgpu(+) rfkill snd_hwdep libarc4 snd_pcm snd_timer gpu_sched snd drm_ttm_helper mei_me soundcore ttm mei usbhid wmi mac_hid acpi_pad uhid sg crypto_user fuse bpf_preload ip_tables x_tables raid456 libcrc32c async_raid6_recov async_memcpy async_pq async_xor xor async_tx raid6_pq md_mod xhci_pci xhci_pci_renesas i915 i2c_algo_bit intel_gtt video drm_kms_helper syscopyarea sysfillrect sysimgblt
[ 5.043900] fb_sys_fops cec drm agpgart vfat fat ext4 crc32c_generic crc32c_intel crc16 mbcache jbd2 atkbd libps2 serio
[ 5.044924] CR2: 000000000000002f
[ 5.044963] ---[ end trace 546b2f7225af6ab0 ]---
[ 5.049323] RIP: 0010:debugfs_create_file_size+0x2e/0x40
[ 5.051842] Code: 00 4d 85 c0 53 48 c7 c0 00 dc 05 94 4c 89 cb 4d 89 c1 49 c7 c0 00 da 05 94 0f b7 f6 4c 0f 44 c0 e8 07 fe ff ff 48 85 c0 74 08 <48> 8b 40 30 48 89 58 50 5b c3 0f 1f 84 00 00 00 00 00 0f 1f 44 00
[ 5.054147] RSP: 0018:ffffb70440b37970 EFLAGS: 00010286
[ 5.056657] RAX: ffffffffffffffff RBX: 00000001ff000000 RCX: ffff95aac4520000
[ 5.058954] RDX: 0000000000000000 RSI: ffffffffffffffff RDI: ffffffffc0e58b6b
[ 5.061324] RBP: ffff95aac4520000 R08: ffffffff9405da00 R09: ffffffffc0d026a0
[ 5.063680] R10: ffffb70440b377a8 R11: ffffffff94accde8 R12: ffff95aac4520000
[ 5.066033] R13: ffffffffffffffff R14: ffff95aac4520000 R15: 0000000000000000
[ 5.068352] FS: 00007f35c4634a40(0000) GS:ffff95b1d6c80000(0000) knlGS:0000000000000000
[ 5.070682] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 5.072942] CR2: 000000000000002f CR3: 000000010316c003 CR4: 00000000003706e0
[ 5.075097] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[ 5.077300] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400